# Intruder

./: .gitignore  README.md  pyproject.toml
src/intruder/: __init__.py  runner.py
src/intruder/evaluation/: evaluate.py
src/intruder/student_code/: solutions.ipynb  task1.ipynb  task2.ipynb  task3.ipynb  task4.ipynb
src/intruder/video/: __init__.py  background.py  render.py  video.py  video_base_objects.py
src/tests/: __init__.py  test_evaluation.py
src/tests/data/: gt.txt  pred.txt
